Fix a couple of home page layout bugs

--- a/ui/sass/component/_home-grid.scss
+++ b/ui/sass/component/_home-grid.scss
@@ -9,6 +9,7 @@
 }
 
 .c-home-grid__main-column {
+    overflow-x: hidden;
 }
 
 .c-home-grid__sidebar-column {
